--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Bryan Lagos">
+    <meta name="description" content="Viajes Chile">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-     <!---Mi estilo-->
-     <link rel="stylesheet" href="./assets/css/style.css">
 
-     <!--- CDN JQuery-->
-     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <!---Mi estilo-->
+    <link rel="stylesheet" href="./assets/css/style.css">
 
-     <!--CDN Font Awesome-->
+    <!--- CDN JQuery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+    <!--CDN Font Awesome-->
 
     <title>Viajes Chile!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hola probando</h1>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    
 
     
     <!-- Option 2: Separate Popper and Bootstrap JS -->
