--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!--Barra de navegacion-->
 
-  <nav id="navHome" class="navbar fondo-nav navbar-expand-lg navbar-dark fixed-top px-5">
+  <nav id="navHome" class="navbar navbar-expand-lg navbar-dark fixed-top px-5">
     <div class="container-fluid">
       <a class="navbar-brand text-light mx-4 " href="#">
         <img src="assets/img/viajes.svg" alt="viajeslog" width="23">
@@ -94,8 +94,8 @@
   <!--Quienes somos-->
   <section id="quienessomos" class="container pb-5 px-2">
     <div class="d-none d-sm-none d-md-block">
-      <h2 class="h4 text-white fw-light text-center my-5 border-bottom border-info pb-4">¿Quiénes somos?
-      </h2>
+      <h4 class="text-white fw-light text-center my-5 border-bottom border-info pb-4">¿Quiénes somos?
+      </h4>
       <div class="row">
         <!--card01-->
         <div class="col mx-3">
@@ -217,33 +217,15 @@
 
   </section>
 
- 
-
   <!-- Contacto -->
 
-  <h4 class="text-white fw-light text-center my-5 border-bottom border-info pb-4">Contacto</h4>
-  <section id="contacto" class="container">
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi amet omnis nemo? Accusamus atque voluptatibus
-      dolorem cum repellat sapiente veniam blanditiis perferendis neque iste, commodi sit tempora? Iure, voluptatibus
-      quod?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt reprehenderit nulla consectetur facere vel odio
-      voluptatem quasi obcaecati iusto vitae sed ea similique, autem itaque ipsum. Mollitia cupiditate culpa labore.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad asperiores provident cumque tempore, explicabo quas
-      veritatis suscipit hic voluptates. Beatae, eius quisquam? Iure ipsa autem quisquam eveniet natus facere debitis!
-    </p>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae dicta aliquid cupiditate alias, repellendus
-      veritatis! Alias vel similique, maiores quod molestias velit ut totam nesciunt cum beatae eaque praesentium.
-      Dolorem autem labore obcaecati aperiam nesciunt quae ipsa iure, inventore distinctio incidunt asperiores quaerat
-      veritatis sunt optio dolores doloribus quasi rem reprehenderit earum odit adipisci! Temporibus pariatur velit,
-      perferendis tempore repudiandae voluptatibus reprehenderit id mollitia natus, atque rerum, dicta at error
-      consectetur iusto explicabo assumenda. Corrupti atque perferendis quos porro placeat et ea earum facilis
-      voluptatem maiores aut sint quibusdam voluptatibus consequatur dignissimos, praesentium doloremque eveniet, quis
-      blanditiis deserunt dolores officiis.
-    </p>
+  <h4 id="contacto" class="text-white fw-light text-center my-5 border-bottom border-info pb-4">Contacto</h4>
+  <section class="container mb-5">
+    <div data-tf-widget="I7MruP4q" data-tf-iframe-props="title=Geography Quiz (copy)" style="width:100%;height:400px;">
+    </div>
+    <script src="//embed.typeform.com/next/embed.js"></script>
   </section>
-
+  
 
   <!--Redes Sociales-->
   <footer class="container-fluid text-center bg-info text-white">
